# align-press-2

./: .coverage  .gitignore  FAILING_TESTS.md  FASE1_STATUS.md  LAUNCH_GUIDE.md  README.md  SETUP.md  STATUS_REPORT.md  TEST_FIX_SUMMARY.md  TEST_STATUS_FINAL.md  TEST_STATUS_REPORT.md  align_press_dev_plan.md  pyproject.toml  quick_test.py  requirements.txt  run_app.py
align_press_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alignpress/: __init__.py
alignpress/cli/: __init__.py  __main__.py  benchmark.py  calibrate.py  main.py  test_detector.py  validate_profile.py
alignpress/core/: __init__.py  composition.py  detector.py  job_card.py  profile.py  schemas.py
alignpress/hardware/: __init__.py
alignpress/ui/: __init__.py  app.py  main_window.py
alignpress/ui/operator/: __init__.py  checklist.py  live_view.py  wizard.py
alignpress/ui/technician/: __init__.py  calibration_wizard.py  debug_view.py  profile_editor.py
alignpress/ui/widgets/: __init__.py  camera_widget.py  metrics_panel.py
alignpress/utils/: __init__.py  config_loader.py  geometry.py  image_utils.py  logger.py
calibration/: example_calibration.json
config/: app.yaml  example_detector.yaml  platen_50x60_detector.yaml
config/schemas/: README.md  detector.schema.json  platen.schema.json  style.schema.json  variant.schema.json
docs/: SINGLE_LOGO_DETECTION.md  TESTING_SETUP.md  cli_tools.md
docs/cli/: README.md
docs/core/: detector_api.md
profiles/estilos/: polo_basico.yaml
profiles/estilos/styles/: demo_style.yaml  simple_style.yaml
profiles/planchas/: plancha_300x200.yaml
profiles/planchas/platens/: demo_platen.yaml  small_platen.yaml
profiles/variantes/: talla_m.yaml
templates/: README.md
tests/: conftest.py
tests/fixtures/: conftest.py  generate_mock_images.py  test_helpers.py
tests/fixtures/configs/: mock_detector_config.yaml
tests/integration/: test_cli_benchmark.py  test_cli_calibrate.py  test_cli_integration.py  test_complete_workflow.py  test_transparency_workflow.py
tests/ui/: test_app.py  test_camera_widget.py  test_checklist.py  test_live_view.py  test_main_window.py  test_metrics_panel.py  test_wizard.py
tests/ui/technician/: __init__.py  test_calibration_wizard.py  test_debug_view.py  test_profile_editor.py
tests/unit/: test_composition.py  test_detector.py  test_detector_transparency.py  test_geometry.py  test_geometry_extended.py  test_image_utils.py  test_job_card.py  test_logger.py  test_profile.py  test_schemas.py  test_schemas_extended.py  test_template_extraction_transparency.py
tools/: create_test_templates.py  validate_setup.py
tools/testing/: README.md  calibrate_from_image.py  chessboard_9x6_25mm.txt  complete_testing_workflow.py  extract_template.py  quick_test_your_platen.py  run_full_evaluation.py  setup_testing_environment.py
